@@ -1778,7 +1778,6 @@ void HandleEnterNotify(void)
      * frame; otherwise the window list may be screwed up. */
     return;
   }
-fprintf(stderr,"hen: t 0x%08x, w 0x%08x, mode %d\n", (int)Tmp_win, (int)Event.xcrossing.window, Event.xcrossing.mode);
   if (ewp->mode == NotifyGrab)
   {
     return;
@@ -1804,7 +1803,6 @@ fprintf(stderr,"hen: t 0x%08x, w 0x%08x, mode %d\n", (int)Tmp_win, (int)Event.xc
     is_initial_ungrab_pending = False;
   }
 
-fprintf(stderr,"hen: 1\n");
   /* look for a matching leaveNotify which would nullify this enterNotify */
   if (XCheckTypedWindowEvent (dpy, ewp->window, LeaveNotify, &d))
   {
@@ -1820,7 +1818,6 @@ fprintf(stderr,"hen: 1\n");
 	return;
     }
   }
-fprintf(stderr,"hen: 2\n");
 
   if (ewp->window == Scr.Root)
   {
@@ -1852,7 +1849,6 @@ fprintf(stderr,"hen: 2\n");
     {
       InstallWindowColormaps(NULL);
     }
-fprintf(stderr,"hen: 3\n");
     return;
   }
   else
@@ -1860,7 +1856,6 @@ fprintf(stderr,"hen: 3\n");
     Scr.flags.is_pointer_on_this_screen = 1;
   }
 
-fprintf(stderr,"hen: 3x\n");
   /* an EnterEvent in one of the PanFrameWindows activates the Paging */
   if (ewp->window==Scr.PanFrameTop.win
       || ewp->window==Scr.PanFrameLeft.win
@@ -1874,26 +1869,18 @@ fprintf(stderr,"hen: 3x\n");
     HandlePaging(Scr.EdgeScrollX,Scr.EdgeScrollY,
                  &ewp->x_root,&ewp->y_root,
                  &delta_x,&delta_y,True,True,False);
-fprintf(stderr,"hen: 4\n");
     return;
-  }
-
-  if (!(sf = get_focus_window()) || HAS_MOUSE_FOCUS(sf))
-  {
-    DeleteFocus(1);
   }
   /* make sure its for one of our windows */
   if (!Tmp_win)
   {
     /* handle a subwindow cmap */
     EnterSubWindowColormap(Event.xany.window);
-fprintf(stderr,"hen: 5\n");
     return;
   }
 
   if (HAS_MOUSE_FOCUS(Tmp_win) || HAS_SLOPPY_FOCUS(Tmp_win))
   {
-fprintf(stderr,"hen: 6\n");
     SetFocusWindow(Tmp_win, 1);
   }
   else if (HAS_NEVER_FOCUS(Tmp_win))
@@ -1901,11 +1888,9 @@ fprintf(stderr,"hen: 6\n");
     /* Give the window a chance to grab the buttons needed for raise-on-click */
     if ((sf = get_focus_window()) != Tmp_win)
     {
-fprintf(stderr,"hen: 7\n");
       focus_grab_buttons(Tmp_win, False);
       focus_grab_buttons(sf, True);
     }
-fprintf(stderr,"hen: 8\n");
   }
   else if (HAS_CLICK_FOCUS(Tmp_win) && Tmp_win == get_focus_window() &&
 	   do_accept_input_focus(Tmp_win))
@@ -1914,7 +1899,6 @@ fprintf(stderr,"hen: 8\n");
      * fvwm window.  Motif apps may lose the input focus otherwise.  But do not
      * try to refresh the focus of applications that want to handle it
      * themselves. */
-fprintf(stderr,"hen: 9\n");
     FOCUS_SET(Tmp_win->w);
   }
   if (Scr.ColormapFocus == COLORMAP_FOLLOWS_MOUSE)
@@ -1932,9 +1916,7 @@ fprintf(stderr,"hen: 9\n");
   {
     SET_ICON_ENTERED(Tmp_win,1);
     DrawIconWindow(Tmp_win);
-fprintf(stderr,"hen: 10\n");
   }
-fprintf(stderr,"hen: 11\n");
 
   return;
 }
@@ -1954,10 +1936,8 @@ void HandleLeaveNotify(void)
    * frame; otherwise the window list may be screwed up. */
   if (Scr.flags.is_wire_frame_displayed)
     return;
-fprintf(stderr,"hln: t 0x%08x, w 0x%08x, mode %d\n", (int)Tmp_win, (int)Event.xcrossing.window, Event.xcrossing.mode);
   if (Event.xcrossing.mode != NotifyNormal)
   {
-fprintf(stderr,"hln: not nn\n");
     /* Ignore events generated by grabbing or ungrabbing the pointer.  However,
      * there is no way to prevent the ckient application from handling this
      * event and, for example, grabbing the focus.  This will interfere with
@@ -1966,7 +1946,6 @@ fprintf(stderr,"hln: not nn\n");
 	(Event.xcrossing.window == Tmp_win->decor_w ||
 	 Event.xcrossing.window == Tmp_win->w))
     {
-fprintf(stderr,"hln: new lgw\n");
       xcrossing_last_grab_window = Tmp_win;
     }
     return;
