@@ -1,3 +1,8 @@
+2001-05-02  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/events.c (HandleEnterNotify): Backout fixed MouseFocus
+	transition w/ neverfocus and clicktofocus change and some debug stmts.
+
 2001-05-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleConfigureRequest):
